# dosa

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  doc-segment.code-workspace  pyproject.toml  requirements.txt  requirements_gpu.txt
DocParser/: .gitignore  README.md  setup.py
DocParser/docparser/: stage1_entity_detector.py  stage2_structure_parser.py
DocParser/docparser/default_models/: README.md
DocParser/docparser/objdetmetrics_lib/: BoundingBox.py  BoundingBoxes.py  Evaluator.py  utils.py
DocParser/docparser/utils/: data_utils.py  eval_utils.py  experiment_utils.py  postprocess_icdar_table_structure.py  postprocess_table_structure.py  postprocess_utils.py  structure_utils.py
Mask_RCNN/: README.md  requirements.txt  setup.py
Mask_RCNN/mrcnn/: config.py  model.py  parallel_model.py  utils.py  visualize.py
PaddleOCR/: .gitignore  MANIFEST.in  README.md  README_ch.md  __init__.py  paddleocr.py  requirements.txt  setup.py
PaddleOCR/PPOCRLabel/: PPOCRLabel.py  README.md  combobox.py  setup.py
PaddleOCR/PPOCRLabel/libs/: autoDialog.py  canvas.py  colorDialog.py  constants.py  create_ml_io.py  editinlist.py  hashableQListWidgetItem.py  (+7 more)
PaddleOCR/StyleText/: README.md
PaddleOCR/ppstructure/: predict_system.py  utility.py
PaddleOCR/tools/: eval.py  export_model.py  infer_cls.py  infer_det.py  infer_e2e.py  infer_rec.py  infer_table.py  program.py  test_hubserving.py  train.py
demos/: docParser-demo.py  docParser-detection.py  paddle-detection.py  server_api.py
server/: .env.copy  README.md  run.sh
server/app/: main.py
(+197 files in other folders)
